# sorting-assistant

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-create-executable-binary.yml  python-executable-binary-creation.yml  python-publish-package.yml
src/sorting_assistant/: __about__.py  __init__.py  __main__.py  sorting_assistant.py  sorting_assistant_flet.py
tests/: __init__.py
